cbits/Bullet.h

void btManifoldPoint_m_index1_set(void *c,int a); //attribute: int btManifoldPoint->m_index1
int btManifoldPoint_m_index1_get(void *c); //attribute: int btManifoldPoint->m_index1
void btManifoldPoint_m_lateralFrictionDir1_set(void *c,float* a); //attribute: ::btVector3 btManifoldPoint->m_lateralFrictionDir1
void btManifoldPoint_m_lateralFrictionDir1_get(void *c,float* a);
void btManifoldPoint_m_lateralFrictionDir2_set(void *c,float* a); //attribute: ::btVector3 btManifoldPoint->m_lateralFrictionDir2
void btManifoldPoint_m_lateralFrictionDir2_get(void *c,float* a);
void btManifoldPoint_m_lateralFrictionInitialized_set(void *c,int a); //attribute: bool btManifoldPoint->m_lateralFrictionInitialized
int btManifoldPoint_m_lateralFrictionInitialized_get(void *c); //attribute: bool btManifoldPoint->m_lateralFrictionInitialized
void btManifoldPoint_m_lifeTime_set(void *c,int a); //attribute: int btManifoldPoint->m_lifeTime
int btManifoldPoint_m_lifeTime_get(void *c); //attribute: int btManifoldPoint->m_lifeTime
void btManifoldPoint_m_localPointA_set(void *c,float* a); //attribute: ::btVector3 btManifoldPoint->m_localPointA
void btManifoldPoint_m_localPointA_get(void *c,float* a);
void btManifoldPoint_m_localPointB_set(void *c,float* a); //attribute: ::btVector3 btManifoldPoint->m_localPointB
void btManifoldPoint_m_localPointB_get(void *c,float* a);
void btManifoldPoint_m_normalWorldOnB_set(void *c,float* a); //attribute: ::btVector3 btManifoldPoint->m_normalWorldOnB
void btManifoldPoint_m_normalWorldOnB_get(void *c,float* a);
void btManifoldPoint_m_partId0_set(void *c,int a); //attribute: int btManifoldPoint->m_partId0
int btManifoldPoint_m_partId0_get(void *c); //attribute: int btManifoldPoint->m_partId0
void btManifoldPoint_m_partId1_set(void *c,int a); //attribute: int btManifoldPoint->m_partId1
int btManifoldPoint_m_partId1_get(void *c); //attribute: int btManifoldPoint->m_partId1
void btManifoldPoint_m_positionWorldOnA_set(void *c,float* a); //attribute: ::btVector3 btManifoldPoint->m_positionWorldOnA
void btManifoldPoint_m_positionWorldOnA_get(void *c,float* a);
void btManifoldPoint_m_positionWorldOnB_set(void *c,float* a); //attribute: ::btVector3 btManifoldPoint->m_positionWorldOnB
void btManifoldPoint_m_positionWorldOnB_get(void *c,float* a);
void btManifoldPoint_m_userPersistentData_set(void *c,void* a); //attribute: void * btManifoldPoint->m_userPersistentData
void* btManifoldPoint_m_userPersistentData_get(void *c); //attribute: void * btManifoldPoint->m_userPersistentData
void* btPersistentManifold_new0(); //constructor: btPersistentManifold  ( ::btPersistentManifold::* )(  ) 
void* btPersistentManifold_new1(void* p0,void* p1,int p2,float p3,float p4); //constructor: btPersistentManifold  ( ::btPersistentManifold::* )( void *,void *,int,::btScalar,::btScalar ) 
void btPersistentManifold_free(void *c);
 
void btPersistentManifold_setBodies(void *c,void* p0,void* p1); //method: setBodies void ( ::btPersistentManifold::* )( void *,void * ) 